library/src/libqitemselectionmodel.h

typedef QMetaObject::Connection QMetaObject__Connection;
typedef struct QAbstractItemModel QAbstractItemModel;
typedef struct QItemSelection QItemSelection;
typedef struct QItemSelectionModel QItemSelectionModel;
typedef struct QItemSelectionRange QItemSelectionRange;
typedef struct QMetaObject QMetaObject;
typedef struct QMetaObject__Connection QMetaObject__Connection;
typedef struct QModelIndex QModelIndex;
typedef struct QObject QObject;
QTLIBC_API QItemSelectionModel* QItemSelectionModel_new();
QTLIBC_API QItemSelectionModel* QItemSelectionModel_new2(QAbstractItemModel* model, QObject* parent);
QTLIBC_API QItemSelectionModel* QItemSelectionModel_new3(QAbstractItemModel* model);
QTLIBC_API QMetaObject* QItemSelectionModel_MetaObject(const QItemSelectionModel* self);
QTLIBC_API void* QItemSelectionModel_Metacast(QItemSelectionModel* self, const char* param1);
QTLIBC_API int QItemSelectionModel_Metacall(QItemSelectionModel* self, int param1, int param2, void** param3);
QTLIBC_API libqt_string QItemSelectionModel_Tr(const char* s);
QTLIBC_API QModelIndex* QItemSelectionModel_CurrentIndex(const QItemSelectionModel* self);
QTLIBC_API bool QItemSelectionModel_IsSelected(const QItemSelectionModel* self, QModelIndex* index);
QTLIBC_API bool QItemSelectionModel_IsRowSelected(const QItemSelectionModel* self, int row);
QTLIBC_API bool QItemSelectionModel_IsColumnSelected(const QItemSelectionModel* self, int column);
QTLIBC_API bool QItemSelectionModel_RowIntersectsSelection(const QItemSelectionModel* self, int row);
QTLIBC_API bool QItemSelectionModel_ColumnIntersectsSelection(const QItemSelectionModel* self, int column);
QTLIBC_API bool QItemSelectionModel_HasSelection(const QItemSelectionModel* self);
QTLIBC_API libqt_list /* of QModelIndex* */ QItemSelectionModel_SelectedIndexes(const QItemSelectionModel* self);
QTLIBC_API libqt_list /* of QModelIndex* */ QItemSelectionModel_SelectedRows(const QItemSelectionModel* self);
QTLIBC_API libqt_list /* of QModelIndex* */ QItemSelectionModel_SelectedColumns(const QItemSelectionModel* self);
QTLIBC_API QItemSelection* QItemSelectionModel_Selection(const QItemSelectionModel* self);
QTLIBC_API QAbstractItemModel* QItemSelectionModel_Model(const QItemSelectionModel* self);
QTLIBC_API QAbstractItemModel* QItemSelectionModel_Model2(QItemSelectionModel* self);
QTLIBC_API void QItemSelectionModel_SetModel(QItemSelectionModel* self, QAbstractItemModel* model);
QTLIBC_API void QItemSelectionModel_SetCurrentIndex(QItemSelectionModel* self, QModelIndex* index, int command);
QTLIBC_API void QItemSelectionModel_Select(QItemSelectionModel* self, QModelIndex* index, int command);
QTLIBC_API void QItemSelectionModel_Select2(QItemSelectionModel* self, QItemSelection* selection, int command);
QTLIBC_API void QItemSelectionModel_Clear(QItemSelectionModel* self);
QTLIBC_API void QItemSelectionModel_Reset(QItemSelectionModel* self);
QTLIBC_API void QItemSelectionModel_ClearSelection(QItemSelectionModel* self);
QTLIBC_API void QItemSelectionModel_ClearCurrentIndex(QItemSelectionModel* self);
void QItemSelectionModel_Connect_SelectionChanged(QItemSelectionModel* self, intptr_t slot);
void QItemSelectionModel_Connect_CurrentChanged(QItemSelectionModel* self, intptr_t slot);
void QItemSelectionModel_Connect_CurrentRowChanged(QItemSelectionModel* self, intptr_t slot);
void QItemSelectionModel_Connect_CurrentColumnChanged(QItemSelectionModel* self, intptr_t slot);
void QItemSelectionModel_Connect_ModelChanged(QItemSelectionModel* self, intptr_t slot);
QTLIBC_API libqt_string QItemSelectionModel_Tr2(const char* s, const char* c);
QTLIBC_API libqt_string QItemSelectionModel_Tr3(const char* s, const char* c, int n);
QTLIBC_API bool QItemSelectionModel_IsRowSelected2(const QItemSelectionModel* self, int row, QModelIndex* parent);
QTLIBC_API bool QItemSelectionModel_IsColumnSelected2(const QItemSelectionModel* self, int column, QModelIndex* parent);
QTLIBC_API bool QItemSelectionModel_RowIntersectsSelection2(const QItemSelectionModel* self, int row, QModelIndex* parent);
QTLIBC_API bool QItemSelectionModel_ColumnIntersectsSelection2(const QItemSelectionModel* self, int column, QModelIndex* parent);
QTLIBC_API libqt_list /* of QModelIndex* */ QItemSelectionModel_SelectedRows1(const QItemSelectionModel* self, int column);
QTLIBC_API libqt_list /* of QModelIndex* */ QItemSelectionModel_SelectedColumns1(const QItemSelectionModel* self, int row);
QTLIBC_API void QItemSelectionModel_EmitSelectionChanged(QItemSelectionModel* self, QItemSelection* newSelection, QItemSelection* oldSelection);
QTLIBC_API void QItemSelectionModel_Delete(QItemSelectionModel* self);
QTLIBC_API QItemSelection* QItemSelection_new(QModelIndex* topLeft, QModelIndex* bottomRight);
QTLIBC_API void QItemSelection_Select(QItemSelection* self, QModelIndex* topLeft, QModelIndex* bottomRight);
QTLIBC_API bool QItemSelection_Contains(const QItemSelection* self, QModelIndex* index);
QTLIBC_API libqt_list /* of QModelIndex* */ QItemSelection_Indexes(const QItemSelection* self);
QTLIBC_API void QItemSelection_Merge(QItemSelection* self, QItemSelection* other, int command);
QTLIBC_API void QItemSelection_Split(QItemSelectionRange* range, QItemSelectionRange* other, QItemSelection* result);
QTLIBC_API void QItemSelection_Delete(QItemSelection* self);