src/qt/libqitemselectionmodel.bf

	
	public bool SignalsBlocked()
	{
		return CQt.QObject_SignalsBlocked(this.nativePtr);
	}
	
	public bool BlockSignals(bool b)
	{
		return CQt.QObject_BlockSignals(this.nativePtr, b);
	}
	
	public void* Thread()
	{
		return CQt.QObject_Thread(this.nativePtr);
	}
	
	public void MoveToThread(IQThread thread)
	{
		CQt.QObject_MoveToThread(this.nativePtr, (thread == null) ? null : (void*)thread.NativePtr);
	}
	
	public int32 StartTimer(int32 interval)
	{
		return CQt.QObject_StartTimer(this.nativePtr, interval);
	}
	
	public void KillTimer(int32 id)
	{
		CQt.QObject_KillTimer(this.nativePtr, id);
	}
	
	public void*[] Children()
	{
		return CQt.QObject_Children(this.nativePtr);
	}
	
	public void SetParent(IQObject parent)
	{
		CQt.QObject_SetParent(this.nativePtr, (parent == null) ? null : (void*)parent.NativePtr);
	}
	
	public void InstallEventFilter(IQObject filterObj)
	{
		CQt.QObject_InstallEventFilter(this.nativePtr, (filterObj == null) ? null : (void*)filterObj.NativePtr);
	}
	
	public void RemoveEventFilter(IQObject obj)
	{
		CQt.QObject_RemoveEventFilter(this.nativePtr, (obj == null) ? null : (void*)obj.NativePtr);
	}
	
	public static void Connect(IQObject sender, IQMetaMethod signal, IQObject receiver, IQMetaMethod method)
	{
		CQt.QObject_Connect((sender == null) ? null : (void*)sender.NativePtr, (signal == default) ? default : (void*)signal.NativePtr, (receiver == null) ? null : (void*)receiver.NativePtr, (method == default) ? default : (void*)method.NativePtr);
	}
	
	public void Connect2(IQObject sender, char8* signal, char8* member)
	{
		CQt.QObject_Connect2(this.nativePtr, (sender == null) ? null : (void*)sender.NativePtr, signal, member);
	}
	
	public static bool Disconnect(IQObject sender, IQMetaMethod signal, IQObject receiver, IQMetaMethod member)
	{
		return CQt.QObject_Disconnect((sender == null) ? null : (void*)sender.NativePtr, (signal == default) ? default : (void*)signal.NativePtr, (receiver == null) ? null : (void*)receiver.NativePtr, (member == default) ? default : (void*)member.NativePtr);
	}
	
	public static bool DisconnectWithQMetaObjectConnection(QMetaObject__Connection param1)
	{
		return CQt.QObject_DisconnectWithQMetaObjectConnection((param1 == default) ? default : (void*)param1.NativePtr);
	}
	
	public void DumpObjectTree()
	{
		CQt.QObject_DumpObjectTree(this.nativePtr);
	}
	
	public void DumpObjectInfo()
	{
		CQt.QObject_DumpObjectInfo(this.nativePtr);
	}
	
	public bool SetProperty(char8* name, IQVariant value)
	{
		return CQt.QObject_SetProperty(this.nativePtr, name, (value == default) ? default : (void*)value.NativePtr);
	}
	
	public void Property(char8* name)
	{
		CQt.QObject_Property(this.nativePtr, name);
	}
	
	public libqt_string[] DynamicPropertyNames()
	{
		return CQt.QObject_DynamicPropertyNames(this.nativePtr);
	}
	
	public void* BindingStorage()
	{
		return CQt.QObject_BindingStorage(this.nativePtr);
	}
	
	public void* BindingStorage2()
	{
		return CQt.QObject_BindingStorage2(this.nativePtr);
	}
	
	public void* Parent()
	{
		return CQt.QObject_Parent(this.nativePtr);
	}
	
	public bool Inherits(char8* classname)
	{
		return CQt.QObject_Inherits(this.nativePtr, classname);
	}
	
	public void DeleteLater()
	{
		CQt.QObject_DeleteLater(this.nativePtr);
	}
	
	public int32 StartTimer2(int32 interval, int64 timerType)
	{
		return CQt.QObject_StartTimer2(this.nativePtr, interval, timerType);
	}
	
	public static void Connect5(IQObject sender, IQMetaMethod signal, IQObject receiver, IQMetaMethod method, int64 typeVal)
	{
		CQt.QObject_Connect5((sender == null) ? null : (void*)sender.NativePtr, (signal == default) ? default : (void*)signal.NativePtr, (receiver == null) ? null : (void*)receiver.NativePtr, (method == default) ? default : (void*)method.NativePtr, typeVal);
	}
	
	public void Connect4(IQObject sender, char8* signal, char8* member, int64 typeVal)
	{
		CQt.QObject_Connect4(this.nativePtr, (sender == null) ? null : (void*)sender.NativePtr, signal, member, typeVal);
	}
	
}
extension CQt
{
	[LinkName("QItemSelectionModel_new")]
	public static extern void* QItemSelectionModel_new();
	[LinkName("QItemSelectionModel_new2")]
	public static extern void* QItemSelectionModel_new2(void* model, void* parent);
	[LinkName("QItemSelectionModel_new3")]
	public static extern void* QItemSelectionModel_new3(void* model);
	[LinkName("QItemSelectionModel_MetaObject")]
	public static extern void* QItemSelectionModel_MetaObject(void* c_this);
	[LinkName("QItemSelectionModel_Metacast")]
	public static extern void* QItemSelectionModel_Metacast(void* c_this, char8* param1);
	[LinkName("QItemSelectionModel_Metacall")]
	public static extern int32 QItemSelectionModel_Metacall(void* c_this, int64 param1, int32 param2, void* param3);
	[LinkName("QItemSelectionModel_Tr")]
	public static extern libqt_string QItemSelectionModel_Tr(char8* s);
	[LinkName("QItemSelectionModel_CurrentIndex")]
	public static extern void QItemSelectionModel_CurrentIndex(void* c_this);
	[LinkName("QItemSelectionModel_IsSelected")]
	public static extern bool QItemSelectionModel_IsSelected(void* c_this, void* index);
	[LinkName("QItemSelectionModel_IsRowSelected")]
	public static extern bool QItemSelectionModel_IsRowSelected(void* c_this, int32 row);
	[LinkName("QItemSelectionModel_IsColumnSelected")]
	public static extern bool QItemSelectionModel_IsColumnSelected(void* c_this, int32 column);
	[LinkName("QItemSelectionModel_RowIntersectsSelection")]
	public static extern bool QItemSelectionModel_RowIntersectsSelection(void* c_this, int32 row);
	[LinkName("QItemSelectionModel_ColumnIntersectsSelection")]
	public static extern bool QItemSelectionModel_ColumnIntersectsSelection(void* c_this, int32 column);
	[LinkName("QItemSelectionModel_HasSelection")]
	public static extern bool QItemSelectionModel_HasSelection(void* c_this);
	[LinkName("QItemSelectionModel_SelectedIndexes")]
	public static extern void[] QItemSelectionModel_SelectedIndexes(void* c_this);
	[LinkName("QItemSelectionModel_SelectedRows")]
	public static extern void[] QItemSelectionModel_SelectedRows(void* c_this);
	[LinkName("QItemSelectionModel_SelectedColumns")]
	public static extern void[] QItemSelectionModel_SelectedColumns(void* c_this);
	[LinkName("QItemSelectionModel_Selection")]
	public static extern void QItemSelectionModel_Selection(void* c_this);
	[LinkName("QItemSelectionModel_Model")]
	public static extern void* QItemSelectionModel_Model(void* c_this);
	[LinkName("QItemSelectionModel_Model2")]
	public static extern void* QItemSelectionModel_Model2(void* c_this);
	[LinkName("QItemSelectionModel_SetModel")]
	public static extern void QItemSelectionModel_SetModel(void* c_this, void* model);
	[LinkName("QItemSelectionModel_SetCurrentIndex")]
	public static extern void QItemSelectionModel_SetCurrentIndex(void* c_this, void* index, int64 command);
	[LinkName("QItemSelectionModel_Select")]
	public static extern void QItemSelectionModel_Select(void* c_this, void* index, int64 command);
	[LinkName("QItemSelectionModel_Select2")]
	public static extern void QItemSelectionModel_Select2(void* c_this, void* selection, int64 command);
	[LinkName("QItemSelectionModel_Clear")]
	public static extern void QItemSelectionModel_Clear(void* c_this);
	[LinkName("QItemSelectionModel_Reset")]
	public static extern void QItemSelectionModel_Reset(void* c_this);
	[LinkName("QItemSelectionModel_ClearSelection")]
	public static extern void QItemSelectionModel_ClearSelection(void* c_this);
	[LinkName("QItemSelectionModel_ClearCurrentIndex")]
	public static extern void QItemSelectionModel_ClearCurrentIndex(void* c_this);
	[LinkName("QItemSelectionModel_Connect_SelectionChanged")]
	public static extern void QItemSelectionModel_Connect_SelectionChanged(void* c_this, c_intptr slot);
	[LinkName("QItemSelectionModel_Connect_CurrentChanged")]
	public static extern void QItemSelectionModel_Connect_CurrentChanged(void* c_this, c_intptr slot);
	[LinkName("QItemSelectionModel_Connect_CurrentRowChanged")]
	public static extern void QItemSelectionModel_Connect_CurrentRowChanged(void* c_this, c_intptr slot);
	[LinkName("QItemSelectionModel_Connect_CurrentColumnChanged")]
	public static extern void QItemSelectionModel_Connect_CurrentColumnChanged(void* c_this, c_intptr slot);
	[LinkName("QItemSelectionModel_Connect_ModelChanged")]
	public static extern void QItemSelectionModel_Connect_ModelChanged(void* c_this, c_intptr slot);
	[LinkName("QItemSelectionModel_EmitSelectionChanged")]
	public static extern void QItemSelectionModel_EmitSelectionChanged(void* c_this, void* newSelection, void* oldSelection);
	[LinkName("QItemSelectionModel_Tr2")]
	public static extern libqt_string QItemSelectionModel_Tr2(char8* s, char8* c);
	[LinkName("QItemSelectionModel_Tr3")]
	public static extern libqt_string QItemSelectionModel_Tr3(char8* s, char8* c, int32 n);
	[LinkName("QItemSelectionModel_IsRowSelected2")]
	public static extern bool QItemSelectionModel_IsRowSelected2(void* c_this, int32 row, void* parent);
	[LinkName("QItemSelectionModel_IsColumnSelected2")]
	public static extern bool QItemSelectionModel_IsColumnSelected2(void* c_this, int32 column, void* parent);
	[LinkName("QItemSelectionModel_RowIntersectsSelection2")]
	public static extern bool QItemSelectionModel_RowIntersectsSelection2(void* c_this, int32 row, void* parent);
	[LinkName("QItemSelectionModel_ColumnIntersectsSelection2")]
	public static extern bool QItemSelectionModel_ColumnIntersectsSelection2(void* c_this, int32 column, void* parent);
	[LinkName("QItemSelectionModel_SelectedRows1")]
	public static extern void[] QItemSelectionModel_SelectedRows1(void* c_this, int32 column);
	[LinkName("QItemSelectionModel_SelectedColumns1")]
	public static extern void[] QItemSelectionModel_SelectedColumns1(void* c_this, int32 row);
	/// Delete this object from C++ memory
	[LinkName("QItemSelectionModel_Delete")]
	public static extern void QItemSelectionModel_Delete(void* self);
}
public interface IQItemSelection
{
	void* NativePtr { get; }
}
public class QItemSelection : IQItemSelection // Also inherits unprojectable QList<QItemSelectionRange>
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this(IQModelIndex topLeft, IQModelIndex bottomRight)
	{
		this.nativePtr = CQt.QItemSelection_new((topLeft == default) ? default : (void*)topLeft.NativePtr, (bottomRight == default) ? default : (void*)bottomRight.NativePtr);
	}
	
	public ~this()
	{
		CQt.QItemSelection_Delete(this.nativePtr);
	}
	
	public void Select(IQModelIndex topLeft, IQModelIndex bottomRight)
	{
		CQt.QItemSelection_Select(this.nativePtr, (topLeft == default) ? default : (void*)topLeft.NativePtr, (bottomRight == default) ? default : (void*)bottomRight.NativePtr);
	}
	
	public bool Contains(IQModelIndex index)
	{
		return CQt.QItemSelection_Contains(this.nativePtr, (index == default) ? default : (void*)index.NativePtr);
	}
	
	public void[] Indexes()
	{
		return CQt.QItemSelection_Indexes(this.nativePtr);
	}
	
	public void Merge(IQItemSelection other, int64 command)
	{
		CQt.QItemSelection_Merge(this.nativePtr, (other == default) ? default : (void*)other.NativePtr, command);
	}
	
	public static void Split(IQItemSelectionRange range, IQItemSelectionRange other, IQItemSelection result)
	{
		CQt.QItemSelection_Split((range == default) ? default : (void*)range.NativePtr, (other == default) ? default : (void*)other.NativePtr, (result == null) ? null : (void*)result.NativePtr);
	}
	
}
